--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,58 @@ section {
 /* End Contact */
 
 
+/* Footer */
+.footer {
+    display: flex;
+    justify-content: space-around;
+    background: var(--second-bg-color);
+    color: var(--second-color);
+    padding: 80px 20px 30px 20px;
+    flex-wrap: wrap;
+
+}
+
+.footer .social-icons-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.footer .share {
+    padding: 1rem 0;
+    text-align: center;
+    margin-top: -90px;
+}
+
+.footer .share a {
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color: var(--second-color);
+    border: 1px solid;
+    margin: 0.3rem;
+    border-radius: 50%;
+}
+
+.footer .share a:hover {
+    opacity: 0.7;
+}
+
+.footer .social-icons-container .share {
+    display: flex;
+}
+
+.footer .mr-draclyr {
+    text-align: center;
+    font-size: 14px;
+    margin-top: 30px;
+}
+
+/* End Footer */
+
+
 /* Media Queries for responsiveness */
 @media (max-width:924px) {
 
