--- a/css/style.css
+++ b/css/style.css
@@ -562,4 +562,6 @@ section {
 /* End Media Queries for responsiveness */
 
 
-/* create by Hesam Shahmoradi (Draclyr) */
+/* 
+create by Hesam Shahmoradi ( Draclyr ) 
+*/
